--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gym trainer | Template </title>
+    <title>Gym Template </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/icon/price.png">
 
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -47,7 +47,7 @@
                     <div class="menu-wrapper d-flex align-items-center justify-content-between">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                            <a href="index.html"><img src="#" alt="">Logo here</a>
                         </div>
                         <!-- Main-menu -->
                         <div class="main-menu f-right d-none d-lg-block">
@@ -273,8 +273,8 @@
                                     <img src="assets/img/icon/price.svg" alt="">
                                 </div>
                                 <div class="properties__caption">
-                                    <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <span class="month">1 month</span>
+                                    <p class="mb-25">$30/m <span>(BASIC PACKAGE)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -327,8 +327,8 @@
                                     <img src="assets/img/icon/price.svg" alt="">
                                 </div>
                                 <div class="properties__caption">
-                                    <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <span class="month">3 month</span>
+                                    <p class="mb-25">$50/m <span>(PREMIUM PACKAGE)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -382,7 +382,7 @@
                                 </div>
                                 <div class="properties__caption">
                                     <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <p class="mb-25">$80/m <span>(DIAMOND PACKAGE)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -564,7 +564,7 @@
                             <div class="single-footer-caption mb-50 text-center">
                                 <!-- logo -->
                                 <div class="footer-logo wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                    <a href="index.html"><img src="#" alt="">Logo Here</a>
                                 </div>
                                 <!-- Menu -->
                                 <!-- Header Start -->
@@ -590,9 +590,9 @@
                                 <!-- Header End -->
                                 <!-- social -->
                                 <div class="footer-social mt-30 wow fadeInUp" data-wow-duration="3s" data-wow-delay=".8s">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="#"><i class="fab fa-youtube"></i></a>
                                 </div>
                             </div>
                         </div>
