--- a/pricing.html
+++ b/pricing.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/icon/price.png">
 
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -47,7 +47,7 @@
                     <div class="menu-wrapper d-flex align-items-center justify-content-between">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                            <a href="index.html"><img src="#" alt="">Logo Here</a>
                         </div>
                         <!-- Main-menu -->
                         <div class="main-menu f-right d-none d-lg-block">
@@ -110,8 +110,62 @@
                                     <img src="assets/img/icon/price.svg" alt="">
                                 </div>
                                 <div class="properties__caption">
-                                    <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <span class="month">1 month</span>
+                                    <p class="mb-25">$30/m <span>(BASIC PACKAGE)</span></p>
+                                    <div class="single-features">
+                                        <div class="features-icon">
+                                            <img src="assets/img/icon/check.svg" alt="">
+                                        </div>
+                                        <div class="features-caption">
+                                            <p>Free riding </p>
+                                        </div>
+                                    </div>
+                                    <div class="single-features">
+                                        <div class="features-icon">
+                                            <img src="assets/img/icon/check.svg" alt="">
+                                        </div>
+                                        <div class="features-caption">
+                                            <p>Unlimited equipments</p>
+                                        </div>
+                                    </div>
+                                    <div class="single-features">
+                                        <div class="features-icon">
+                                            <img src="assets/img/icon/check.svg" alt="">
+                                        </div>
+                                        <div class="features-caption">
+                                            <p>Personal trainer</p>
+                                        </div>
+                                    </div>
+                                    <div class="single-features">
+                                        <div class="features-icon">
+                                            <img src="assets/img/icon/check.svg" alt="">
+                                        </div>
+                                        <div class="features-caption">
+                                            <p>Weight losing classes</p>
+                                        </div>
+                                    </div>
+                                    <div class="single-features mb-20">
+                                        <div class="features-icon">
+                                            <img src="assets/img/icon/check.svg" alt="">
+                                        </div>
+                                        <div class="features-caption">
+                                            <p>Month to mouth</p>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="border-btn border-btn2">Join Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="properties mb-30">
+                            <div class="properties__card">
+                                <div class="about-icon">
+                                    <img src="assets/img/icon/price.svg" alt="">
+                                </div>
+                                <div class="properties__caption">
+                                    <span class="month">3 month</span>
+                                    <p class="mb-25">$50/m <span>(PREMIUM PACKAGE)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -165,61 +219,7 @@
                                 </div>
                                 <div class="properties__caption">
                                     <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
-                                    <div class="single-features">
-                                        <div class="features-icon">
-                                            <img src="assets/img/icon/check.svg" alt="">
-                                        </div>
-                                        <div class="features-caption">
-                                            <p>Free riding </p>
-                                        </div>
-                                    </div>
-                                    <div class="single-features">
-                                        <div class="features-icon">
-                                            <img src="assets/img/icon/check.svg" alt="">
-                                        </div>
-                                        <div class="features-caption">
-                                            <p>Unlimited equipments</p>
-                                        </div>
-                                    </div>
-                                    <div class="single-features">
-                                        <div class="features-icon">
-                                            <img src="assets/img/icon/check.svg" alt="">
-                                        </div>
-                                        <div class="features-caption">
-                                            <p>Personal trainer</p>
-                                        </div>
-                                    </div>
-                                    <div class="single-features">
-                                        <div class="features-icon">
-                                            <img src="assets/img/icon/check.svg" alt="">
-                                        </div>
-                                        <div class="features-caption">
-                                            <p>Weight losing classes</p>
-                                        </div>
-                                    </div>
-                                    <div class="single-features mb-20">
-                                        <div class="features-icon">
-                                            <img src="assets/img/icon/check.svg" alt="">
-                                        </div>
-                                        <div class="features-caption">
-                                            <p>Month to mouth</p>
-                                        </div>
-                                    </div>
-                                    <a href="#" class="border-btn border-btn2">Join Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="properties mb-30">
-                            <div class="properties__card">
-                                <div class="about-icon">
-                                    <img src="assets/img/icon/price.svg" alt="">
-                                </div>
-                                <div class="properties__caption">
-                                    <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <p class="mb-25">$80/m <span>(DIAMOND PACKAGE)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -323,7 +323,7 @@
                             <div class="single-footer-caption mb-50 text-center">
                                 <!-- logo -->
                                 <div class="footer-logo wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                    <a href="index.html"><img src="#" alt="">Logo Here</a>
                                 </div>
                                 <!-- Menu -->
                                 <!-- Header Start -->
@@ -349,9 +349,9 @@
                                 <!-- Header End -->
                                 <!-- social -->
                                 <div class="footer-social mt-30 wow fadeInUp" data-wow-duration="3s" data-wow-delay=".8s">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="#"><i class="fab fa-youtube"></i></a>
                                 </div>
                             </div>
                         </div>
